--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Ubuntu', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
